@@ -1,18 +1,3 @@
-%
-%   Copyright 2007-2010 The OpenMx Project
-%
-%   Licensed under the Apache License, Version 2.0 (the "License");
-%   you may not use this file except in compliance with the License.
-%   You may obtain a copy of the License at
-% 
-%        http://www.apache.org/licenses/LICENSE-2.0
-% 
-%   Unless required by applicable law or agreed to in writing, software
-%   distributed under the License is distributed on an "AS IS" BASIS,
-%   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-%   See the License for the specific language governing permissions and
-%   limitations under the License.
-
 \name{omxSetParameters}
 \alias{omxSetParameters}
 
@@ -24,7 +9,8 @@
 
 \usage{
 omxSetParameters(model, labels, free = NULL, values = NULL,
-	newlabels = NULL, lbound = NULL, ubound = NULL, indep = FALSE)
+	newlabels = NULL, lbound = NULL, ubound = NULL, indep = FALSE,
+	strict = TRUE)
 }
 
 \arguments{
@@ -36,6 +22,7 @@ omxSetParameters(model, labels, free = NULL, values = NULL,
    \item{lbound}{a numeric vector of lower bound values.} 
    \item{ubound}{a numeric vector of upper bound values.} 
    \item{indep}{boolean. set parameters in independent submodels.}
+   \item{strict}{boolean. if TRUE then throw an error when a label does not appear in the model.}
 }
 
 \seealso{
